src/test/deca/context/invalid/void.deca
// Description:
//    Teste une declaration de variable de type void ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    void x;
}
